--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -41,9 +41,9 @@ jobs:
 
     - name: Build and push Docker images
       run: |
-        cd app/Dockerfile
-        docker-compose build
-        docker-compose push
+        cd app
+         docker build -t ${{ secrets.DOCKER_USERNAME }}/img:latest .
+         docker push ${{ secrets.DOCKER_USERNAME }}/img:latest
 
     - name: Logout from Docker Hub
       run: docker logout
